<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Activity.ProfileActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView_user"
            android:layout_width="154dp"
            android:layout_height="148dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_id__white___1_"/>

        <TextView
            android:id="@+id/nameUser_2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="200dp"
            android:text="@string/name_user"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
           />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="#000000"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <ImageView
            android:id="@+id/imageView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/emailsvg" />

        <TextView
            android:id="@+id/print_email_2"
            android:layout_width="197dp"
            android:layout_height="46dp"
            android:layout_marginStart="5dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/upload_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="Upload Image"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="#000000"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/password_toggle_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:src="@drawable/passwordsvg" />

        <TextView
            android:id="@+id/show_password_2"
            android:layout_width="134dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"

            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_password_2"
            android:layout_width="135dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="19dp"
        android:background="#000000"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/logout_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:src="@drawable/phonesvg" />

        <TextView
            android:id="@+id/user_phone_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/phone_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <Button
        android:id="@+id/logout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#000000"
        android:text="@string/logout"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/deleteAccount_2"
        app:layout_constraintEnd_toEndOf="@+id/deleteAccount_2"
        app:layout_constraintStart_toStartOf="@+id/deleteAccount_2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/deleteAccount_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:text="@string/delete_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_2"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="604dp">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>